--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,16 +11,11 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      - name: Create output zip
-        uses: vimtor/action-zip@v1
-        with:
-          files: Instances/ JoobsPack-Lite.zip
-          recursive: false
-          dest: JoobsPack-Lite.zip
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${{ github.workspace }}/*.zip
+          files: Instances/ JoobsPack-Lite.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: cranberriez/joobsmodpack
