--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+      - name: Uploade Zip File
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-artifact
+          path: Instances/JoobsPack-Lite.zip
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -28,6 +33,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./Instances/JoobsPack-Lite.zip
+          asset_path: ${{ github.workspace }}/*.zip
           asset_name: JoobsPack-Lite.zip
           asset_content_type: application/zip
